文件命令规范统一为：小写字母+_

--- a/generators/app/templates/views/index.html
+++ b/generators/app/templates/views/index.html
@@ -22,7 +22,7 @@
 	<meta name="keywords" content="标记内容太短，则搜索引擎可能不会认为这些内容相关。另外标记不应超过 874 个字符">
 	<meta name="description" content="不超过150个字符">
 	<title>虎牙移动端模板</title>
-	<link rel="stylesheet" href="../css/pages/pages-module.scss"><!--ignore-->
+	<link rel="stylesheet" href="../css/pages/pages_module.scss"><!--ignore-->
 	<!--STYLE_PLACEHOLDER-->
 	<link rel="stylesheet" href="../css/pages/index.scss">
 </head>
