--- a/generators/app/templates/views/index.html
+++ b/generators/app/templates/views/index.html
@@ -8,17 +8,10 @@
 	<meta name="format-detection" content="telphone=no, email=no"><!-- 忽略页面中的数字识别为电话，忽略email识别 -->
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta http-equiv="Cache-Control" content="no-siteapp">
-	<meta name="HandheldFriendly" content="true">
-	<meta name="MobileOptimized" content="320">
-	<meta name="screen-orientation" content="portrait">
-	<meta name="x5-orientation" content="portrait">
-	<meta name="full-screen" content="yes">
-	<meta name="x5-fullscreen" content="true">
-	<meta name="browsermode" content="application">
-	<meta name="x5-page-mode" content="app">
+	<meta http-equiv="Pragma" content="no-cache">
+	<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+ 	<meta http-equiv="Window-target" content="_top">
 	<meta name="msapplication-tap-highlight" content="no">
-	<meta name="author" content="xiejinlong, 303182519@qq.com">
 	<meta name="keywords" content="标记内容太短，则搜索引擎可能不会认为这些内容相关。另外标记不应超过 874 个字符">
 	<meta name="description" content="不超过150个字符">
 	<title>huya-app模板</title>
