--- a/generators/app/templates/views/index.html
+++ b/generators/app/templates/views/index.html
@@ -28,7 +28,7 @@
 <body>
 	
 	<% if(noCustomBase) { %>
-	<script src="http://a.msstatic.com/huya/hd/cdn_libs/<%=lib%>_mod.js"></script><!--ignore-->
+	<script src="//a.msstatic.com/huya/hd/cdn_libs/<%=lib%>_mod.js"></script><!--ignore-->
 	<% } else { %>
 	<script src="../lib/base.js"></script><!--ignore-->
 	<% } %>
