--- a/generators/app/templates/css/base/__normalize.scss
+++ b/generators/app/templates/css/base/__normalize.scss
@@ -154,7 +154,7 @@ img {
 
 html {
   	// font-size: 62.5%; // set base font-size to 10px (16px * 62.5), 1rem = 10px
-	font-size: 10px; // Firefox on Mac default font-size is 15px
+	// font-size: 10px; // Firefox on Mac default font-size is 15px
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
