--- a/generators/app/templates/views/index.html
+++ b/generators/app/templates/views/index.html
@@ -21,6 +21,9 @@
     </script><!--ignore-->
 	<!--<![endif]-->
 	<% } %>
+	<% if(layout == 'flexible') { %>
+	<script src="//a.msstatic.com/huya/hd/cdn_libs/flexible.js"></script><!--ignore-->
+	<% } %>
 	<link rel="stylesheet" href="../css/pages/pages_module.scss"><!--ignore-->
 	<!--STYLE_PLACEHOLDER-->
 	<link rel="stylesheet" href="../css/pages/index.scss">
