--- a/generators/view/templates/view.html
+++ b/generators/view/templates/view.html
@@ -26,7 +26,7 @@
 	<% } %>
 	<link rel="stylesheet" href="../css/pages/pages_module.scss"><!--ignore-->
 	<!--STYLE_PLACEHOLDER-->
-	<link rel="stylesheet" href="../css/pages/index.scss">
+	<link rel="stylesheet" href="../css/pages/<%=viewName%>.scss">
 	<% if(huyaHeaderFooter) {%>
 	<style type="text/css"> body {padding-top: 50px } </style> 
 	<% if(noCustomBase) { %>
@@ -54,7 +54,7 @@
 	<!--SCRIPT_PLACEHOLDER-->
 	<!--DEPENDENCIES_INJECT_PLACEHOLDER-->
 	<script>
-		require('modules/index')
+		require('modules/<%=viewName%>')
 	</script>
 	<% if(huyaHeaderFooter) { %>
 	<script src="//a.msstatic.com/huya/common/footer.js"></script>
