--- a/generators/view/templates/view.html
+++ b/generators/view/templates/view.html
@@ -28,13 +28,13 @@
 	<!--STYLE_PLACEHOLDER-->
 	<link rel="stylesheet" href="../css/pages/<%=viewName%>.scss">
 	<% if(huyaHeaderFooter) {%>
-	<style type="text/css"> body {padding-top: 50px } </style> 
+	<style type="text/css"> body {padding-top: 50px } </style><!--ignore--> 
 	<% if(noCustomBase) { %>
 	<script src="//a.msstatic.com/huya/hd/cdn_libs/<%=lib%>_mod.js"></script><!--ignore-->
 	<% } else { %>
 	<script src="../lib/base.js"></script><!--ignore-->
 	<% } %>
-	<script src="//a.msstatic.com/huya/common/header_lg.js"></script>
+	<script src="//a.msstatic.com/huya/common/header_lg.js"></script><!--ignore-->
 	<% } %>
 </head>
 <body>
