--- a/generators/app/templates/views/index.html
+++ b/generators/app/templates/views/index.html
@@ -50,7 +50,9 @@
 	<script src="../lib/base.js"></script><!--ignore-->
 	<% } %>
 	<% } %>
+	<!--prod-->
 	<script src="//a.msstatic.com/huya/hd/cdn_libs/huyaerr_hdmonitor-v1.0.0.js" id="huyahiido_err_monitor" act="webhuyahderror" pageview="<%=projectName + '-' + viewName%>"></script><!--ignore-->
+	<!--/prod-->
 	<!--RESOURCEMAP_PLACEHOLDER-->
 	<!--SCRIPT_PLACEHOLDER-->
 	<!--DEPENDENCIES_INJECT_PLACEHOLDER-->
