--- a/generators/view/templates/view.html
+++ b/generators/view/templates/view.html
@@ -32,12 +32,6 @@
 	<link rel="stylesheet" href="../css/pages/<%=viewName%>.scss">
 	<% if(huyaHeaderFooter) {%>
 	<style type="text/css"> body {padding-top: 50px } </style><!--ignore--> 
-	<% if(noCustomBase) { %>
-	<script src="//a.msstatic.com/huya/hd/cdn_libs/<%=lib%>_mod.js"></script><!--ignore-->
-	<% } else { %>
-	<script src="../lib/base.js"></script><!--ignore-->
-	<% } %>
-	<script src="//a.msstatic.com/huya/common/header_lg.js"></script><!--ignore-->
 	<% } %>
 </head>
 <body>
@@ -46,12 +40,13 @@
 
 
 
-	<% if(!huyaHeaderFooter) {%>
 	<% if(noCustomBase) { %>
 	<script src="//a.msstatic.com/huya/hd/cdn_libs/<%=lib%>_mod.js"></script><!--ignore-->
 	<% } else { %>
 	<script src="../lib/base.js"></script><!--ignore-->
 	<% } %>
+	<% if(huyaHeaderFooter) {%>
+	<script src="//a.msstatic.com/huya/common/header_lg.js"></script><!--ignore-->
 	<% } %>
 	<!--prod-->
 	<script src="//a.msstatic.com/huya/hd/cdn_libs/huyaerr_hdmonitor-v1.0.0.js" id="huyahiido_err_monitor" act="webhuyahderror" pageview="<%=projectName + '-' + viewName%>"></script><!--ignore-->
