--- a/generators/view/templates/view.html
+++ b/generators/view/templates/view.html
@@ -58,7 +58,7 @@
 		require('modules/<%=viewName%>')
 	</script>
 	<% if(huyaHeaderFooter) { %>
-	<script src="//a.msstatic.com/huya/common/footer.js"></script>
+	<script src="//a.msstatic.com/huya/common/footer.js"></script><!--ignore-->
 	<% } %>
 	<% if(antiHijack) { %>
 	<!--[if gt IE 6]><!-->
